[package]
name = "media-proxy-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "media_proxy_rs_lib"
bench = false
crate-type = ["rlib", "cdylib"]

[dependencies]
# image processing
image = { version = "0.25", features = ["default-formats"]}
webp-animation = "0.9"

# utils
url = "2"
bytes = "1"
http = "1"
tracing-subscriber = "0.3"
futures-util = "0.3"

# develop related
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["stream"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# http server
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = { version = "0.1" }

# utils
reqwest = { version = "0.12", features = ["default", "stream"] }
