[package]
name = "media-proxy-rs"
version = "0.2.2"
edition = "2024"

[lib]
name = "media_proxy_rs_lib"
bench = false
crate-type = ["rlib", "cdylib"]

[features]
default = [ "server", "anim" ]
anim = ["dep:webp-animation"]
server = ["dep:tokio", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]

[[bin]]
name = "media-proxy-rs"
required-features = ["server"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# image processing
image = { version = "0.25", features = ["default-formats"]}
webp-animation = { version = "0.9", optional = true }

# utils
url = "2"
bytes = "1"
http = "1"
tracing-subscriber = "0.3"
futures-util = "0.3"

# develop related
tracing = "0.1"

# http server
tokio = { version = "1", features = ["full"], optional = true }
hyper = { version = "1", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
http-body-util = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["stream"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
